--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Quiz de Conhecimento Geral</h1>
+        <h1>Quiz de Bullying Geral</h1>
         <div class="question" id="question">
             <!-- A pergunta e opções serão carregadas aqui -->
         </div>
