--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
 <body>
     <div class="container">
         <h1>Quiz de Bullying Geral</h1>
+        <h1>Feito por: Ivan, Leandra, Matheus, Rafael, João. </h1>
+        <h1>Escola: C. E Admardo Alves Torres. </h1>
+        <h1>Professora: Patrícia</h1>
+       
         <div class="question" id="question">
             <!-- A pergunta e opções serão carregadas aqui -->
         </div>
