--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <body>
     <div class="container">
         <h1>Quiz de Bullying Geral</h1>
-        <h1>Feito por: Ivan, Leandra, Matheus, Rafael, João. </h1>
+        <h1>Feito por: Ivan, Leandro, Matheus, Rafael, João. </h1>
         <h1>Escola: C. E Admardo Alves Torres. </h1>
         <h1>Professora: Patrícia</h1>
        
