--- a/jogo1.html
+++ b/jogo1.html
@@ -81,8 +81,9 @@
 <body>
     <div class="container">
         <h1>Jogo de Adivinhação de Palavras</h1>
-        <p id="palavraAtual"></p> <!-- Adicionando elemento para exibir a palavra atual -->
-        <p id="dica"></p> <!-- Adicionando elemento para exibir a dica -->
+             <p>Feito por: Ivan, Leandro, Matheus, Rafael, João.</p>
+        <p>Escola: C. E Admardo Alves Torres. </p>
+        <p>Professora: Patrícia</p>
         <input type="text" id="guessInput">
         <button onclick="checkGuess()">Verificar</button>
         <button onclick="getHint()">Obter Dica</button>
