--- a/jogo2.html
+++ b/jogo2.html
@@ -52,9 +52,9 @@
 <body>
     <div class="container">
         <h1>Quiz de Bullying Geral</h1>
-        <h1>Feito por: Ivan, Leandro, Matheus, Rafael, João. </h1>
+        <h1>Feito por: Ivan eitalo. </h1>
         <h1>Escola: C. E Admardo Alves Torres. </h1>
-        <h1>Professora: Patrícia</h1>
+        <h1>Professora: Louisi</h1>
        
         <div class="question" id="question">
             <!-- A pergunta e opções serão carregadas aqui -->
