--- a/jogo1.html
+++ b/jogo1.html
@@ -81,9 +81,9 @@
 <body>
     <div class="container">
         <h1>Jogo de Adivinhação de Palavras</h1>
-             <p>Feito por: Ivan, Leandro, Matheus, Rafael, João.</p>
+             <p>Feito por: Ivan E ITALO.</p>
         <p>Escola: C. E Admardo Alves Torres. </p>
-        <p>Professora: Patrícia</p>
+        <p>Professora: LOUISI</p>
         <input type="text" id="guessInput">
         <button onclick="checkGuess()">Verificar</button>
         <button onclick="getHint()">Obter Dica</button>
