--- a/jogo2.html
+++ b/jogo2.html
@@ -6,7 +6,7 @@
     <title>Jogo de Alternativas</title>
     <style>
         body {
-            background: linear-gradient(135deg, #74ebd5, #acb6e5);
+            background: linear-gradient(135deg, #ff4d4d, #ff9999);
             font-family: Arial, sans-serif;
             display: flex;
             justify-content: center;
@@ -17,18 +17,19 @@
         .container {
             max-width: 600px;
             padding: 20px;
-            background: #ffffff;
+            background: #ffcccc;
             border-radius: 12px;
             box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
             text-align: center;
         }
         h1 {
-            color: #333;
+            color: #b30000;
         }
         .question {
             margin-bottom: 20px;
             font-size: 18px;
             font-weight: bold;
+            color: #800000;
         }
         .options {
             list-style-type: none;
@@ -36,13 +37,13 @@
         }
         .options li {
             margin-bottom: 10px;
-            background: #f8f9fa;
+            background: #ff6666;
             padding: 10px;
             border-radius: 5px;
             transition: background 0.3s;
         }
         .options li:hover {
-            background: #e3e3e3;
+            background: #ff3333;
         }
         input[type="radio"] {
             margin-right: 10px;
@@ -50,7 +51,7 @@
         #submitBtn {
             display: block;
             margin: 20px auto 0;
-            background: #28a745;
+            background: #cc0000;
             color: white;
             padding: 12px 20px;
             border: none;
@@ -60,12 +61,12 @@
             transition: background 0.3s;
         }
         #submitBtn:hover {
-            background: #218838;
+            background: #990000;
         }
         #result {
             margin-top: 15px;
             font-weight: bold;
-            color: #333;
+            color: #660000;
         }
     </style>
 </head>
